# smart-order-routing-dashboard

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
ai_viz_platform/: .env.example  .gitignore  README.md  main.py  requirements.txt  train_exec_model.py  train_model.py
ai_viz_platform/exec_ml/: __init__.py  dataset.py  features.py  serving.py  simulate.py  train.py
ai_viz_platform/frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
ai_viz_platform/frontend/scripts/: ws-smoke-test.mjs
ai_viz_platform/frontend/src/: App.tsx  styles.css
ai_viz_platform/frontend/src/components/: ExecutionPanel.tsx  PanelHeader.tsx  PredictionPanel.tsx  RoutingPanel.tsx
ai_viz_platform/models/: btc_direction.onnx  model_metadata.json
ai_viz_platform/models/exec_quality/: EVAL_REPORT.md  eval_report.json  exec_model_metadata.json  fill_model.joblib  latency_model.joblib  slippage_model.joblib
ai_viz_platform/pipeline/: __init__.py  app.py  broadcast.py  exec_predictor.py  features.py  inference.py  ingest.py  ingestion.py  state.py  types.py
ai_viz_platform/tests/: conftest.py  test_e2e.py  test_exec_features.py  test_exec_predict_api.py  test_exec_serving.py  test_ingest.py  ws_live_check.py
exec_quality_ws/: README.md
exec_quality_ws/scripts/: no_ros_bridge_demo.py
exec_quality_ws/src/exec_quality_analyzer/: package.xml  setup.cfg  setup.py
exec_quality_ws/src/exec_quality_interfaces/: CMakeLists.txt  package.xml
exec_quality_ws/src/exec_quality_interfaces/msg/: FillMsg.msg  MetricMsg.msg  OrderMsg.msg  VenueReport.msg
(+33 files in other folders)
